--- a/index.html
+++ b/index.html
@@ -17,29 +17,34 @@
         <h3 class="slogan">For the little Goblin in all of us!</h3>
     </header>
     <main>
-        <section>
+        <aside>
             <ul class="categories-list">
                 <li><a href="/slides/products/props.html">Props</a></li>
                 <li><a href="/slides/products/costumes.html">Costumes</a></li>
                 <li><a href="/slides/products/special_effects.html">Special FX</a></li>
                 <li><a href="/slides/products/masks.html">Masks</a></li>
             </ul>
+        </aside>
+        <section>
+            <h1 class="subhead">Welcome to my site. <br />Please come in and stay awhile.</h1>
+            <p>
+                I started this website because Halloween has always been my favorite holiday. But during the last year,
+                I
+                started selling some of my favorite Halloween products, and they've become quite a hit.
+            </p>
+            <p>
+                If you click on the Personal link, you can browse my favorite Halloween pictures, stories, and films.
+                And if
+                you join my email list, I will keep you up-to-date on all things Halloween.
+            </p>
+            <h2 class="section-title">Product of the week</h2>
+            <img src="./images/cat1.jpg" alt="deranged cat" /><br />
+            <span id="cat-link"><a href="/slides/products/cat.html">20&Prime; Deranged cat</a></span>
+            <h3 class="section-title">My guarantee</h3>
+            <p>If you aren't completely satisfied with everything you buy from my site, you can return it for a full
+                refund.
+                <strong>No questions asked!</strong></p>
         </section>
-        <h1 class="subhead">Welcome to my site. <br />Please come in and stay awhile.</h1>
-        <p>
-            I started this website because Halloween has always been my favorite holiday. But during the last year, I
-            started selling some of my favorite Halloween products, and they've become quite a hit.
-        </p>
-        <p>
-            If you click on the Personal link, you can browse my favorite Halloween pictures, stories, and films. And if
-            you join my email list, I will keep you up-to-date on all things Halloween.
-        </p>
-        <h2 class="section-title">Product of the week</h2>
-        <img src="./images/cat1.jpg" alt="deranged cat" /><br />
-        <span id="cat-link"><a href="/slides/products/cat.html">20&Prime; Deranged cat</a></span>
-        <h3 class="section-title">My guarantee</h3>
-        <p>If you aren't completely satisfied with everything you buy from my site, you can return it for a full refund.
-            <strong>No questions asked!</strong></p>
     </main>
     <footer id="footer">
         &copy; 2016 Ben Murach
